fix: ajusted gap in nav menu

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -45,7 +45,7 @@
 .menu {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -61,7 +61,6 @@
 
 /* Botão cadastre-se à direita */
 .menu-register {
-    flex: 1;
     display: flex;
     justify-content: flex-end;
 }
